# PARTsim

./: .gitattributes  .gitignore  ALGORITHM_COMPARISON_TEST_SUMMARY.md  BTIE修复方案深度验证.md  BTIE正确修复方案.md  CPackConfig.cmake  CPackSourceConfig.cmake  EFPPEPP_CBPP_SCHEDULER_FIX_GUIDE.md  EFPPEPP_SCHEDULER_FIX_GUIDE.md  EFPP_COMPLETE_IMPLEMENTATION.md  ENERGY_DEPLETION_FIX.md  ENERGY_DEPLETION_FIX_COMPLETE.md  ENERGY_DEPLETION_FIX_V51.md  EPP_COMPLETE_IMPLEMENTATION.md  EPP_FIX_SUMMARY.md  EPP_NO_SCHEDULE_METHOD.md  EPP_SCHEDULER_DESIGN.md  NASA_SOLAR_DATA_VERIFICATION.md  NASA_SOLAR_DETAILED_CALCULATIONS.md  QUICKSTART.md  SOLAR_COLLECTION_COMPARISON.md  SOLAR_COLLECTION_FINAL_REPORT.md  SOLAR_COLLECTION_FULL_REPORT.md  SOLAR_DETAILED_CALCULATION_REPORT.md  SOLAR_ENERGY_FIX_AND_RESULTS.md  TGF为什么小那么多分析.md  TIME_COMPARISON_0600_VS_0605.md  Trace文件对比分析.md  V43_实验验证报告.md  V43_工作总结.md  V43_能量耗尽修复文档.md  V51_ENERGY_DEPLETION_FIX_ST_FAMILY.md  V51_ST_SYNC_FIX_SESSION_LOG.md  V51_ST_SYNC_VOID_TASK_BUG_INVESTIGATION.md  V52_NONBLOCK_PURITY_FIX.md  V53_ALAP_ENERGY_CONSERVATION_FIX.md  V56_ALAP_BLOCK_FIX.md  V57_ALAP_NONBLOCK_GREEDY_BYPASS.md  V58_ALAP_NONBLOCK_DLINEMISS_FIX.md  V59_ALAP_SCHEDULER_LOGIC_AUDIT.md  (+89 more)
test/: CMakeLists.txt  test_acceptance_ratio_experiment_metadata.py  test_acceptance_ratio_rta_integration.py  test_acceptance_ratio_tightness.py  test_acceptance_result_semantics.py  test_asap_block_rta.py  test_asap_block_rta_ablation_variants.py  test_asap_block_rta_empty_state_guard.py  test_asap_block_rta_v21.py  test_asap_block_rta_v9_3.py  test_asap_block_rta_v9_3_taskset.py  test_asap_block_v9_3_runner_v1_3_12.py  test_asap_block_v9_3_v1_3_12_microcases.py  test_core0a_v9_3_rebuild.py  test_core0a_v9_3_rebuild2_trust_boundaries.py  test_energy_model.py  test_experiment_analysis_infrastructure.py  test_experiment_runners.py  test_global_task_generator.py  test_harvesting_strength_sensitivity.py  test_mechanism_harvesting_infrastructure.py  test_round7_final_blockers.py  test_round9_final_cleanup.py  test_rta_ablation.py  test_rta_ablation_analysis.py  test_rta_e1_soundness_analysis.py  test_rta_parameter_sensitivity.py  test_rta_parameter_sensitivity_analysis.py  test_rta_scalability.py  test_rta_scalability_analysis.py  test_rta_v21_comparison.py  test_scheduler_diversity_audit.py  test_scheduler_trace_identity.py  test_unified_logger_portability.py  test_v9_3_aggregation_indexing.py  (+103 more)
(+3594 files in other folders)
